# cashew

./: .gitignore  ARM_COMPATIBILITY.md  ARM_QUICKREF.md  BUILD.md  BUILD_FIXES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATIONS_COMPLETE.md  INTEGRATION_CHECKLIST.md  LICENSE  P2P_MESH_COMPLETE.md  PEER_DISCOVERY_COMPLETE.md  PHASE_6_COMPLETE.md  PROJECT_STRUCTURE.md  PROTOCOL_SPEC.md  QUICK_SUMMARY.md  README.md  SETUP.md  STATUS.md  STUB_AUDIT.md  TEST_INSTRUCTIONS.md  TEST_RESULTS.md  UTILITIES_IMPLEMENTATION.md  V1_VALIDATION_REPORT.md  WINDOWS_BUILD.md  WIRING_COMPLETE.md  WORKAROUND_EXPLAINED.md  build-blake3.sh  cashew.conf  check-architecture.sh  linux_compilation_issues  miyamii.net.html  notes.txt  potential_error.txt  setup-linux.sh  setup-raspberry-pi.sh  setup-windows.sh  (+2 more)
.github/workflows/: build.yml  ci.yml  release.yml
deploy/: Caddyfile  Caddyfile.https.example  README.md  arm-probe.sh  bootstrap-windows.ps1  health-check.ps1  health-check.sh  nginx.conf  start-stack.ps1  start-stack.sh  start-tunnel.ps1  stop-stack.ps1  stop-stack.sh  stop-tunnel.ps1
docs/: ARM_SUPPORT.md  HOSTING_AND_SHARING.md  USER_MANUAL.md  cashew-manual.tex
examples/perl-cgi/: Caddyfile.example  README.md  cashew-gateway.pl  server.pl
examples/perl-full-demo/: Caddyfile.example  README.md  cashew-api.pl  index.html  server.pl
include/cashew/: common.hpp  error.hpp  serialization.hpp  time_utils.hpp
include/cashew/gateway/: content_renderer.hpp  gateway_server.hpp  websocket_handler.hpp
scripts/: festival-bootstrap.ps1  verify-linux-cross-compat.sh
src/: CMakeLists.txt  common.cpp  main.cpp
src/core/decay/: decay.cpp  decay.hpp  decay_runner.cpp  decay_runner.hpp
src/core/keys/: key.cpp  key.hpp
src/core/ledger/: ledger.cpp  ledger.hpp  state.cpp  state.hpp
src/core/node/: node.cpp  node.hpp  node_identity.cpp  node_identity.hpp
src/core/postake/: hybrid_coordinator.cpp  hybrid_coordinator.hpp  postake.cpp  postake.hpp
src/core/pow/: pow.cpp  pow.hpp
src/core/reputation/: attestation.cpp  attestation.hpp  reputation.cpp  reputation.hpp
src/core/thing/: thing.cpp  thing.hpp
src/crypto/: argon2.cpp  argon2.hpp  blake3.cpp  blake3.hpp  chacha20poly1305.cpp  chacha20poly1305.hpp  ed25519.cpp  ed25519.hpp  random.cpp  random.hpp  x25519.cpp  x25519.hpp
src/gateway/: content_renderer.cpp  gateway_server.cpp  websocket_handler.cpp
src/identity/: human_identity.cpp  human_identity.hpp
src/network/: activity_monitor.cpp  activity_monitor.hpp  connection.cpp  connection.hpp  gossip.cpp  gossip.hpp  ledger_sync.cpp  ledger_sync.hpp  nat_traversal.cpp  nat_traversal.hpp  network.cpp  network.hpp  peer.cpp  peer.hpp  router.cpp  router.hpp  session.cpp  session.hpp  state_reconciliation.cpp  state_reconciliation.hpp
src/security/: access.cpp  access.hpp  attack_prevention.cpp  attack_prevention.hpp  content_integrity.cpp  content_integrity.hpp  hardware_key_storage.cpp  hardware_key_storage.hpp  ip_protection.cpp  ip_protection.hpp  key_revocation.cpp  key_revocation.hpp  onion_routing.cpp  onion_routing.hpp  token_revocation.cpp  token_revocation.hpp
src/storage/: storage.cpp  storage.hpp
src/utils/: config.cpp  config.hpp  error.cpp  logger.cpp  logger.hpp  serialization.cpp  time_utils.cpp
test-site/: index.html  style.css  upload.sh
test-site/miyamii/: index.html
test-site/miyamii/cgi-bin/: guestbook.pl
tests/: CMakeLists.txt  test_crypto.cpp  test_gateway.cpp  test_identity.cpp  test_keys.cpp  test_ledger_reputation.cpp  test_network.cpp  test_pow.cpp  test_pow_fixed.cpp  test_security.cpp  test_session_fixed.cpp  test_storage.cpp  test_thing.cpp  test_utils.cpp
web/: app.js  index.html  style.css
